[gd_scene load_steps=6 format=3 uid="uid://cj4xnjs204pbe"]

[ext_resource type="Theme" uid="uid://ct3h1jpn888ka" path="res://assets/default_theme.tres" id="1_ky36s"]
[ext_resource type="Script" path="res://game/scenes/language_selection.gd" id="1_rkj6c"]
[ext_resource type="Texture2D" uid="uid://c6k0cxykqfytw" path="res://assets/en.png" id="2_myhdv"]
[ext_resource type="Texture2D" uid="uid://cdqhy3gm081ag" path="res://assets/es.png" id="3_5rwgf"]
[ext_resource type="PackedScene" uid="uid://d0u268u2tja7g" path="res://game/scenes/SceneFader.tscn" id="4_mrfbt"]

[node name="LanguageSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ky36s")
script = ExtResource("1_rkj6c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -13.0
offset_right = 62.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spanish" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_5rwgf")
flat = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="English" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_myhdv")
flat = true

[node name="SceneFader" parent="." instance=ExtResource("4_mrfbt")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
next_scene = "res://game/scenes/Disclaimer.tscn"

[connection signal="pressed" from="HBoxContainer/Spanish" to="." method="_on_spanish_pressed"]
[connection signal="pressed" from="HBoxContainer/English" to="." method="_on_english_pressed"]
